Fix podcast episode list spacing
Broken in the media view page refactor

--- a/mediacore/public/styles/podcasts.css
+++ b/mediacore/public/styles/podcasts.css
@@ -44,7 +44,7 @@
 }
 .podcast-episodes {
 	float: right;
-	width: 265px;
+	width: 255px;
 	padding-left: 15px;
 	margin-bottom: 19px;
 }
